--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ a.button_main {
 .banner_box h1 {
     font-size: 7rem;
 }
+
 /* home page start */
 /* adventure styling start */
 .para_hotel img {
@@ -246,7 +247,118 @@ a.button_main {
 }
 
 /* adventure styling end */
+/* associated styling start */
+.restaurant {
+    background: url(../img/barbanner.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 140px 0;
+    height: 500px;
+    position: relative;
+}
 
+.restaurant::before {
+    position: absolute;
+    content: '';
+    background: rgba(0, 0, 0, 0.55);
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    top: 0%;
+}
+
+.rest_section {
+    padding: 80px 0;
+    background: #0e46a31a;
+}
+
+.rest_one {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 480px;
+    align-items: end;
+    background-size: cover;
+    color: #fff;
+    margin: -10px 0 0;
+    background-image: url(../img/pallet.jpg);
+    border-radius: 20px 0px 0px 20px;
+    position: relative;
+    transition: all 0.3s linear;
+}
+
+
+.bg_link::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+}
+
+a.tel_link {
+    position: relative;
+    z-index: 9;
+}
+
+.rest_two {
+    padding: 40px;
+    background: var(--secondary-color);
+    box-shadow: 2px 2px 4px;
+    height: 530px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.rest_two.vika {
+    height: 570px;
+}
+
+.rest_one a {
+    color: #fff;
+}
+
+.rest_bg {
+    background: #0e46a3;
+    padding: 40px;
+    color: #fff;
+}
+
+.flex_cont a {
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.flex_cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.flex_box:hover h3 {
+    color: #fff;
+}
+
+.flex_box:hover p {
+    color: #fff;
+}
+
+.flex_box:hover a {
+    color: #fff;
+}
+
+.rest_one.one {
+    background-image: url(../img/post.jpg);
+    align-items: start;
+    border-radius: 0px 20px 20px 0;
+}
+
+/* associated styling end */
 /* privacy styling start */
 .privacy__ {
     position: relative;
