--- a/css/style.css
+++ b/css/style.css
@@ -248,26 +248,7 @@ a.button_main {
 
 /* adventure styling end */
 /* associated styling start */
-.restaurant {
-    background: url(../img/barbanner.jpg);
-    background-size: cover;
-    background-position: center;
-    padding: 140px 0;
-    height: 500px;
-    position: relative;
-}
-
-.restaurant::before {
-    position: absolute;
-    content: '';
-    background: rgba(0, 0, 0, 0.55);
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    top: 0%;
-}
-
-.rest_section {
+.associated {
     padding: 80px 0;
     background: #0e46a31a;
 }
@@ -286,7 +267,6 @@ a.button_main {
     position: relative;
     transition: all 0.3s linear;
 }
-
 
 .bg_link::before {
     content: "";
