--- a/css/style.css
+++ b/css/style.css
@@ -253,56 +253,6 @@ a.button_main {
     background: #0e46a31a;
 }
 
-.rest_one {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 480px;
-    align-items: end;
-    background-size: cover;
-    color: #fff;
-    margin: -10px 0 0;
-    background-image: url(../img/pallet.jpg);
-    border-radius: 20px 0px 0px 20px;
-    position: relative;
-    transition: all 0.3s linear;
-}
-
-.bg_link::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-}
-
-a.tel_link {
-    position: relative;
-    z-index: 9;
-}
-
-.rest_two {
-    padding: 40px;
-    background: var(--secondary-color);
-    box-shadow: 2px 2px 4px;
-    height: 530px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.rest_two.vika {
-    height: 570px;
-}
-
-.rest_one a {
-    color: #fff;
-}
-
-.rest_bg {
-    background: #0e46a3;
-    padding: 40px;
-    color: #fff;
-}
-
 .flex_cont a {
     color: #000;
     display: flex;
@@ -324,18 +274,36 @@ a.tel_link {
     color: #fff;
 }
 
-.flex_box:hover p {
-    color: #fff;
-}
-
 .flex_box:hover a {
     color: #fff;
 }
 
-.rest_one.one {
-    background-image: url(../img/post.jpg);
-    align-items: start;
-    border-radius: 0px 20px 20px 0;
+.flex_box:hover::before {
+    transform: translateY(0);
+}
+
+.flex_box::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    transform: translateY(100%);
+    transition: all 0.2s linear;
+    z-index: -1;
+}
+
+.flex_box {
+    background: #fff;
+    box-shadow: 2px 3px 4px;
+    height: 200px;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    isolation: isolate;
 }
 
 /* associated styling end */
