--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ a.button_main {
 .para_hotel img {
     width: 100%;
     max-width: 70%;
-    margin-top: -80px;
+    margin: -80px 0;
     position: relative;
     border: 10px solid #fafafa;
 }
@@ -249,8 +249,12 @@ a.button_main {
 /* adventure styling end */
 /* associated styling start */
 .associated {
-    padding: 80px 0;
-    background: #0e46a31a;
+    padding: 120px 0;
+    background: #ededed;
+}
+
+.flex_box.Shows {
+    background: url(../img/show.jpg);
 }
 
 .flex_cont a {
@@ -304,6 +308,8 @@ a.button_main {
     position: relative;
     overflow: hidden;
     isolation: isolate;
+    background-position: center !important;
+    background-size: cover !important;
 }
 
 /* associated styling end */
