--- a/css/style.css
+++ b/css/style.css
@@ -831,7 +831,7 @@ a.btn.btn-primary.setting-cookies:hover {
 }
 
 section.newsletter {
-    background: #fafafa;
+    background: #ededed;
     padding: 50px 0;
 }
 
