--- a/css/style.css
+++ b/css/style.css
@@ -841,3 +841,29 @@ section.newsletter.download-app {
 }
 
 /* email styling start */
+/* detail styling start */
+.detail {
+    padding: 40px 0;
+    background: #d1e4f33b;
+
+}
+
+.detail_img img {
+    height: 350px;
+    object-fit: cover;
+    width: 100%;
+}
+
+.detail_box {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    background: #fff;
+    padding: 40px;
+    margin-left: -100px;
+    height: 320px;
+    text-align: left;
+}
+
+/* detail styling end */
