--- a/css/style.css
+++ b/css/style.css
@@ -870,3 +870,6 @@ section.newsletter.download-app {
     padding: 60px 0;
     text-align: center;
 }
+/* shows styling start */
+
+/* shows styling end */
