--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,24 @@ section.newsletter.download-app {
     padding: 60px 0;
     text-align: center;
 }
+
 /* shows styling start */
+.shows_banner {
+    background: url(../img/shows.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 300px 0;
+    position: relative;
+}
+
+.shows_banner::before {
+    position: absolute;
+    content: '';
+    background: #000000a8;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    top: 0%;
+}
 
 /* shows styling end */
