--- a/css/style.css
+++ b/css/style.css
@@ -952,6 +952,26 @@ section.newsletter.download-app {
 }
 
 /* shows styling end */
+/* exhibitions styling start */
+.exhib_banner {
+    background: url(../img/excibhition.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 300px 0;
+    position: relative;
+}
+
+.exhib_banner::before {
+    position: absolute;
+    content: '';
+    background: #000000a8;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    top: 0%;
+}
+
+/* exhibitions styling start */
 /* detail section styling start */
 .thessa-inner img {
     transition: all .3s linear;
