--- a/css/style.css
+++ b/css/style.css
@@ -942,6 +942,26 @@ section.newsletter.download-app {
 }
 
 /* hotel styling end */
+/* sports styling start */
+.sports_banner {
+    background: url(../img/sports.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 300px 0;
+    position: relative;
+}
+
+.sports_banner::before {
+    position: absolute;
+    content: '';
+    background: #000000a8;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    top: 0%;
+}
+
+/* sports styling end */
 /* detail section styling start */
 .thessa-inner img {
     transition: all .3s linear;
