--- a/css/style.css
+++ b/css/style.css
@@ -944,7 +944,7 @@ section.newsletter.download-app {
 /* hotel styling end */
 /* sports styling start */
 .sports_banner {
-    background: url(../img/sports.jpg);
+    background: url(../img/sportsbanner.jpg);
     background-size: cover;
     background-position: center;
     padding: 300px 0;
