--- a/css/style.css
+++ b/css/style.css
@@ -188,14 +188,20 @@ a.button_main {
     background: var(--primary-color);
     padding: 10px 40px 10px 40px;
     border: 1px solid var(--primary-color);
-    color:var(--main-color);
+    color: var(--main-color);
     font-weight: 500;
 }
+
 a.button_main:hover {
     background: transparent;
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
 }
+
+.together a {
+    color: #000;
+}
+
 /* ///// */
 .home_banner {
     background: url(../img/macaubanner.jpg);
