--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,6 +24,10 @@
         text-align: center;
     }
 
+    .thessa-inner img {
+        width: 100%;
+    }
+
     .banner-text h1 {
         font-size: 35px;
 
