--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,10 @@ a.button_main:hover {
     color: #000;
 }
 
+.hotel_btn {
+    margin: 30px 0;
+}
+
 /* ///// */
 .home_banner {
     background: url(../img/macaubanner.jpg);
