--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,56 @@
 @media screen and (max-width:1200px) {
 
+    .open {
+        display: block;
+        color: var(--primary-color);
+        font-size: 30px;
+    }
 
+    .closebutton {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 40px;
+        color: #fff;
+        font-size: 25px;
+    }
+
+    .navlink ul li a {
+        color: #000;
+    }
+
+    .navlink ul {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        position: static;
+    }
+
+    .navlink ul li {
+        padding: 10px;
+    }
+
+    .navbar .navlink {
+        margin-left: -15px;
+    }
+
+    .navlink {
+        transform: translateX(-100%);
+        transition: all 0.5s linear;
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        background: var(--primary-color);
+        width: 400px;
+        padding: 40px;
+        margin: 0;
+        z-index: 9;
+    }
+
+    body.toggle .navlink {
+        transform: translateX(0);
+    }
 
     .social_profile ul li a {
         font-size: 18px;
@@ -13,9 +63,6 @@
         margin-top: 20px;
         padding-top: 10px;
     }
-
-
-
 }
 
 @media (max-width: 991px) {
