--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,7 @@ section.newsletter.download-app {
 .thessa-inner {
     padding: 20px;
     height: 100%;
-    box-shadow: 1px 1px 5px #ededed;
+    box-shadow: 1px 1px 5px var(--primary-color);
     display: flex;
     align-items: center;
     justify-content: space-around;
