--- a/css/responsive.css
+++ b/css/responsive.css
@@ -89,6 +89,12 @@
     .home_banner {
         padding: 220px 0;
     }
+    .shows_banner {
+        padding: 200px 0;
+    }
+    .exhib_banner {
+        padding: 200px 0;
+    }
     .single_footer {
         margin-bottom: 50px;
     }
