--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,19 +91,10 @@
     .home_banner {
         padding: 220px 0;
     }
-
-    .shows_banner {
+    .exhib_banner ,.sports_banner ,.hotel_banner ,.shows_banner {
         padding: 200px 0;
     }
-
-    .hotel_banner {
-        padding: 200px 0;
-    }
-
-    .exhib_banner {
-        padding: 200px 0;
-    }
-
+   
     .single_footer {
         margin-bottom: 50px;
     }
