--- a/css/responsive.css
+++ b/css/responsive.css
@@ -114,6 +114,12 @@
     .below_banner .row {
         row-gap: 20px;
     }
+
+    .detail_box {
+        padding: 20px 0 0;
+        margin-left: 0;
+        height: 100%;
+    }
 }
 
 @media (max-width: 767px) {
