--- a/css/style.css
+++ b/css/style.css
@@ -892,7 +892,8 @@ section.newsletter.download-app {
 }
 
 .detail_img img {
-    height: 350px;
+    height: 100%;
+    max-height: 500px;
     object-fit: cover;
     width: 100%;
 }
@@ -903,10 +904,15 @@ section.newsletter.download-app {
     align-items: start;
     justify-content: center;
     background: #fff;
-    padding: 40px;
+    padding: 20px;
     margin-left: -100px;
-    height: 320px;
+    height: 100%;
     text-align: left;
+}
+
+.detail_box h2 {
+    font-size: 30px;
+    padding: 0;
 }
 
 /* detail styling end */
