--- a/css/responsive.css
+++ b/css/responsive.css
@@ -120,6 +120,10 @@
         margin-left: 0;
         height: 100%;
     }
+
+    .blog_box {
+        margin-left: 0;
+    }
 }
 
 @media (max-width: 767px) {
