--- a/css/style.css
+++ b/css/style.css
@@ -1052,5 +1052,22 @@ button.toggle_btn {
 
 /* detail section styling end */
 /* tour styling start */
+.tour_banner {
+    background: url(../img/sportsbanner.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 300px 0;
+    position: relative;
+}
+
+.tour_banner::before {
+    position: absolute;
+    content: '';
+    background: #000000a8;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    top: 0%;
+}
 
 /* tour ending end */
