--- a/css/style.css
+++ b/css/style.css
@@ -1053,7 +1053,7 @@ button.toggle_btn {
 /* detail section styling end */
 /* tour styling start */
 .tour_banner {
-    background: url(../img/sportsbanner.jpg);
+    background: url(../img/tourbanner.jpg);
     background-size: cover;
     background-position: center;
     padding: 300px 0;
