--- a/css/responsive.css
+++ b/css/responsive.css
@@ -159,6 +159,12 @@
     .single_footer {
         margin-bottom: 20px;
     }
+    .below {
+        padding: 20px 0;
+    }
+    .blog_detail {
+        padding: 20px 0;
+    }
 }
 
 @media (max-width: 575px) {
