--- a/css/style.css
+++ b/css/style.css
@@ -348,10 +348,10 @@ a.button_main:hover {
 
 /* associated styling end */
 /* privacy styling start */
-.privacy__ {
+.privacy__section {
     position: relative;
     height: 400px;
-    background-image: url(../image/privacybanner.jpg);
+    background-image: url(../img/prix.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -365,7 +365,7 @@ a.button_main:hover {
     text-align: center;
 }
 
-.privacy__::after {
+.privacy__section::after {
     content: '';
     position: absolute;
     inset: 0;
@@ -393,10 +393,10 @@ a.button_main:hover {
 
 /* privacy styling end */
 /* terms styling start */
-.terms__ {
+.terms__section {
     position: relative;
     height: 400px;
-    background-image: url(../image/termsbanner.jpg);
+    background-image: url(../img/);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -411,7 +411,7 @@ a.button_main:hover {
 
 }
 
-.terms__::after {
+.terms__section::after {
     content: '';
     position: absolute;
     inset: 0;
