--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ a.button_main:hover {
 .terms__section {
     position: relative;
     height: 400px;
-    background-image: url(../img/);
+    background-image: url(../img/termsbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
