--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ a.button_main:hover {
 .privacy__section {
     position: relative;
     height: 400px;
-    background-image: url(../img/prix.jpg);
+    background-image: url(../img/privacy.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
