--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ h2 {
 }
 
 .active {
-    border-bottom: 2px solid var(--main-color);
-    color: var(--main-color) !important;
+    border-bottom: 2px solid #000;
+    color: #000 !important;
 }
 
 .open {
