--- a/css/style.css
+++ b/css/style.css
@@ -765,7 +765,7 @@ a.btn.btn-primary.setting-cookies:hover {
     width: 50%;
     padding: 10px;
     border: none;
-    background-color: #fafafa;
+    background-color: #e8e8e8;
 }
 
 .news-form button {
