--- a/css/style.css
+++ b/css/style.css
@@ -618,59 +618,89 @@ footer ul.nav-list {
 }
 
 /* /cookie start/ */
-.cookie-alert {
+.wrapper {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: 50px;
+    right: -370px;
+    max-width: 345px;
     width: 100%;
-    margin: 0 !important;
-    z-index: 999;
-    opacity: 0;
-    transform: translateY(100%);
-    transition: all 500ms ease-out;
-    left: 0;
+    background: #fff;
+    border-radius: 8px;
+    padding: 15px 25px 22px;
+    transition: right 0.3s ease;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.cookie-alert .btn {
-    color: #fff;
-    background-color: var(--primary-color);
-    border-color: #ffffff;
+.wrapper.show {
+    right: 20px;
 }
 
-.cookie-alert .btn:hover {
-    color: var(--primary-color);
-    background-color: #fff;
-    border-color: var(--primary-color);
-}
-
-.cookie-alert.show {
-    opacity: 1;
-    transform: translateY(0%);
-    transition-delay: 1000ms;
-}
-
-a.btn.btn-primary.setting-cookies {
-    background: transparent;
-    color: #000;
-    text-decoration: underline;
-    padding-bottom: 0;
-    margin-right: 14px;
-    border: none;
-}
-
-a.btn.btn-primary.setting-cookies:hover {
-    color: var(--primary-color);
-    text-decoration-color: var(--primary-color);
-}
-
-.event_box {
+.wrapper header {
     display: flex;
-    flex-direction: column;
-    gap: 100px;
+    align-items: center;
+    column-gap: 15px;
 }
 
-.event_box h2 {
-    padding: 0;
+header i {
+    color: #4070f4;
+    font-size: 32px;
+}
+
+header h2 {
+    color: #4070f4;
+    font-weight: 500;
+}
+
+.wrapper .data {
+    margin-top: 16px;
+}
+
+.wrapper .data p {
+    color: #333;
+    font-size: 16px;
+}
+
+.data p a {
+    color: #4070f4;
+    text-decoration: none;
+}
+
+.data p a:hover {
+    text-decoration: underline;
+}
+
+.wrapper .buttons {
+    margin-top: 16px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.buttons .button {
+    border: none;
+    color: #fff;
+    padding: 8px 0;
+    border-radius: 4px;
+    background: #4070f4;
+    cursor: pointer;
+    width: calc(100% / 2 - 10px);
+    transition: all 0.2s ease;
+}
+
+.buttons #acceptBtn:hover {
+    background-color: #034bf1;
+}
+
+#declineBtn {
+    border: 2px solid #4070f4;
+    background-color: #fff;
+    color: #4070f4;
+}
+
+#declineBtn:hover {
+    background-color: #4070f4;
+    color: #fff;
 }
 
 /* 
