--- a/css/style.css
+++ b/css/style.css
@@ -618,89 +618,49 @@ footer ul.nav-list {
 }
 
 /* /cookie start/ */
-.wrapper {
+.cookie-alert {
     position: fixed;
-    bottom: 50px;
-    right: -370px;
-    max-width: 345px;
+    bottom: 0;
+    right: 0;
     width: 100%;
-    background: #fff;
-    border-radius: 8px;
-    padding: 15px 25px 22px;
-    transition: right 0.3s ease;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 !important;
+    z-index: 999;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: all 500ms ease-out;
+    left: 0;
 }
 
-.wrapper.show {
-    right: 20px;
-}
-
-.wrapper header {
-    display: flex;
-    align-items: center;
-    column-gap: 15px;
-}
-
-header i {
-    color: #4070f4;
-    font-size: 32px;
-}
-
-header h2 {
-    color: #4070f4;
-    font-weight: 500;
-}
-
-.wrapper .data {
-    margin-top: 16px;
-}
-
-.wrapper .data p {
-    color: #333;
-    font-size: 16px;
-}
-
-.data p a {
-    color: #4070f4;
-    text-decoration: none;
-}
-
-.data p a:hover {
-    text-decoration: underline;
-}
-
-.wrapper .buttons {
-    margin-top: 16px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.buttons .button {
-    border: none;
+.cookie-alert .btn {
     color: #fff;
-    padding: 8px 0;
-    border-radius: 4px;
-    background: #4070f4;
-    cursor: pointer;
-    width: calc(100% / 2 - 10px);
-    transition: all 0.2s ease;
+    background-color: var(--primary-color);
+    border-color: #ffffff;
 }
 
-.buttons #acceptBtn:hover {
-    background-color: #034bf1;
-}
-
-#declineBtn {
-    border: 2px solid #4070f4;
+.cookie-alert .btn:hover {
+    color: var(--primary-color);
     background-color: #fff;
-    color: #4070f4;
+    border-color: var(--primary-color);
 }
 
-#declineBtn:hover {
-    background-color: #4070f4;
-    color: #fff;
+.cookie-alert.show {
+    opacity: 1;
+    transform: translateY(0%);
+    transition-delay: 1000ms;
+}
+
+a.btn.btn-primary.setting-cookies {
+    background: transparent;
+    color: #000;
+    text-decoration: underline;
+    padding-bottom: 0;
+    margin-right: 14px;
+    border: none;
+}
+
+a.btn.btn-primary.setting-cookies:hover {
+    color: var(--primary-color);
+    text-decoration-color: var(--primary-color);
 }
 
 /* 
